# grug

./: .gitattributes  .gitignore  CONTEXT.md  LICENSE  Makefile  README.md  pyrightconfig.json
.github/: pull_request_template.md
docs/: CUTOVER.md  HITL_PREREQUISITES.md  NETWORK-TOPOLOGY.md  REVIEWER_PATTERN_HARVEST.md  RUNBOOK.md  SELF_HOST.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
grugthink/: .env.example  Dockerfile  README.md  SLASH_COMMANDS.md  conftest.py  grugthink.py  grugthink_config.yaml.example  pyproject.toml  requirements-app.txt  requirements-ci.txt  requirements-dev.txt  requirements-ml.txt  requirements.txt
infra/pulumi/: Pulumi.dev.yaml  Pulumi.dev.yaml.example  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  pyproject.toml
infra/pulumi/components/: __init__.py  _types.py  cf_shared_secret.py  cloudflare_dns.py  dd_dashboard.py  dd_monitors.py  dd_rum.py  ddb_table.py  ecr_repo.py  k8s_pod_user.py  k8s_rotator.py  kms_cmk.py  lambda_service.py  oidc_role.py  scheduled_lambda.py  ssm_secrets.py
infra/pulumi/tests/: test_dd_monitors.py  test_oidc_role.py
k8s/: api-deployment.yaml  consumer-deployment.yaml  grug-aws-config.yaml  key-rotator-cronjob.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  pki-certificate.yaml  poller-cronjob.yaml  preview-janitor.yaml  smasher-rbac.yaml  smasher-trial-namespace.yaml  webhook-deployment.yaml
logs/: activity.jsonl  review-findings.jsonl  review-findings.manifest.json  review-ledger.jsonl
scripts/: check-mirrored-files.sh  migrate_enforcement.py  promotion.py  tpm.py  (+1 more)
(+626 files in other folders)
